src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Affirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_HR_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm HR Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Framework__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Framework</label>
        <referenceTo>Framework__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HIDDENDataLoad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HIDDEN - Data Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Status_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inactive Status Reason</label>
        <referenceTo>Inactive_Reason__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_HR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-HR Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Contact__c</fullName>
        <description>The application contact with the role of Organization Contact.</description>
        <inlineHelpText>The application contact with the role of Organization Contact.</inlineHelpText>
        <label>Organization Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Organization_Corporate_Officer__c</fullName>
        <description>The application contact with the role of Organization Corporate Officer.</description>
        <inlineHelpText>The application contact with the role of Organization Corporate Officer.</inlineHelpText>
        <label>Organization Corporate Officer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participation</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retains_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retains Data</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>Participant__c</columns>
        <columns>Program__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>ASSET.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>